<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ThisDay</string>
    <string name="thisday">thisday</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="title_activity_feeds">FeedsActivity</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Create">Create</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="newsletter">Sign up for our news letter!</string>
    <string name="popular">Popular This Day</string>
    <string name="friends_activity">Friends Activity</string>
    <string name="recent_events">Recent Events</string>
    <string name="about">About</string>
    <string name="friends_attending">Friends Attending</string>
    <string name="details">Details</string>
    <string name="welcome">welcome to thisday.</string>
    <string name="future_events">Future Events</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="attendees">Attendees</string>
    <string name="link">Link</string>
    <string name="title_activity_item_profile_event">item_profile_event</string>
    <string name="going">Going?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="location1">Location</string>
    <string name="password1">Password</string>
    <string name="details_of_event">Details of Event</string>
    <string name="type">Type:</string>

</resources>