<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etUsername"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD260"
    android:orientation="vertical"
    android:padding="100dp"
    tools:context=".LoginPage"
    tools:deviceIds="wear">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:lineHeight="90dp"
        android:text="@string/thisday"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="100sp"
        android:textStyle="bold" />

    <EditText
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:hint="Username"
        android:textColor="#B27A0D" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#B27A0D" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="#B27A0D" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:textColor="#B27A0D" />
</LinearLayout>