<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD260"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.CreateFragment"
    tools:deviceIds="wear">

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:scaleType="center"
        tools:srcCompact="@tools:sample/avatars" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/event_name" />

    <EditText
        android:id="@+id/etName"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:hint="Name..."
        android:padding="10dp"
        android:textColor="#B27A0D" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/location" />

    <EditText
        android:id="@+id/etLocation"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:hint="Where?"
        android:padding="10dp"
        android:textColor="#B27A0D" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/etDescription"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:hint="What's happening?"
        android:minLines="4"
        android:padding="10dp"
        android:textColor="#B27A0D" />

    <TextView
        android:id="@+id/textView8a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Event Type" />
    <EditText
        android:id="@+id/etType"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:hint="What type of event?"
        android:padding="10dp"
        android:textColor="#B27A0D" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Choose an event date"
        android:id="@+id/tvDate"
        android:layout_marginTop="15dp"
        android:scaleType="center"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>


    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/attendees" />




    <EditText
        android:id="@+id/etAttendees"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:hint="Who's coming?"
        android:padding="10dp"
        android:textColor="#B27A0D" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create"
        android:textColor="#B27A0D" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Take Picture"
        android:textColor="#B27A0D" />

</LinearLayout>